# TokenCalculator

./: CMakeLists.txt  README.md
include/: calculator.h  token.h
src/: calculator.cpp  main.cpp  token.cpp
test/: CMakeLists.txt  CalculatorTests.cpp
